# YandexMusicApi

./: .gitignore  CMakeLists.txt  client.cpp  client.h  errors.h  main.cpp  request.h  track.cpp  track.h  types.h
src/: client.cpp  client.h  track.cpp  track.h  types.h
src/utils/: converter.h  errors.h  jsonSerDer.h  metaprogrammingStuff.h  property.h  request.cpp
